--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="carousel slide cid-rYSHPJGCQQ" data-interval="false" id="slider1-n">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="carousel slide cid-rYSHPJGCQQ" data-interval="false" id="slider1-n">
 
     
 
@@ -124,7 +124,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">UNITED NATIONS ENVIRONEMENT PROGRAM (UNEP)</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           UNEP is the global environmental authority of The United NAtions that promotes and coordinates the implementation of sustainable development as related to the environment. &nbsp;</p>
+                           UNEP is the global environmental authority of The United Nations that promotes and coordinates the implementation of sustainable development as related to the environment. &nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -277,7 +277,7 @@
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>OZONE LAYER DEPLETION</strong></h4>
-                        <p class="item-text display-7">Ozone layer is a part of the atmosphere – precisely the stratosphere – that houses concentrated Ozone gas (O<sub>3</sub>). This gas protects the earth from the violet ultraviolet rays of the sun but it is now destroyed due to the emission of CFCs</p>
+                        <p class="item-text display-7">Ozone layer is a part of the atmosphere – precisely the stratosphere – that houses concentrated Ozone gas (O<sub>3</sub>). This gas protects the earth from the violet ultraviolet rays of the sun but it is now being destroyed due to the emission of CFCs.</p>
                     </div>
                     <div class="item-footer pb-2"><a href="https://en.m.wikipedia.org/wiki/Ozone_depletion" class="btn btn-primary item-btn display-7" target="_blank">Read more</a></div>
                 </div>
@@ -515,7 +515,7 @@
                             </div>
                             <div id="collapse2_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">Human activities such as burning of fossil fuels and those that cause emission Greenhouse gasses (GHGs) and aerosols contribute to change in the natural climate.&nbsp;<br></p>
+                                    <p class="mbr-fonts-style panel-text display-7">Human activities such as burning of fossil fuels and those that cause emission of Greenhouse gasses (GHGs) and aerosols contribute to change in the natural climate.&nbsp;<br></p>
                                 </div>
                             </div>
                         </div>
@@ -528,7 +528,7 @@
                             </div>
                             <div id="collapse3_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">The ozone layer is a layer of gas found in the atmosphere, precisly in the troposhere, that protects the earth against ultraviolet rays of the sun. It is made up of Ozone gas (O3)</p>
+                                    <p class="mbr-fonts-style panel-text display-7">The ozone layer is a layer of gas found in the atmosphere, precisly in the troposhere, that protects the earth against ultraviolet rays of the sun. It is made up of Ozone gas (O3).</p>
                                 </div>
                             </div>
                         </div>
@@ -555,7 +555,7 @@
                             <div id="collapse5_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                                                              The impacts of climate change include but not limited to long lasting heat waves, easier Spread Of disease, loss of habitats and rise in sea levels.</p>
+                                                                              The impacts of climate change include but not limited to long lasting heat waves, easier spread of disease, loss of habitats and rise in sea levels.</p>
                                 </div>
                             </div>
                         </div>
@@ -569,7 +569,7 @@
                             <div id="collapse6_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Ecocide is the deliberate or uncaring destruction of the natural environment</p>
+                                       Ecocide is the deliberate or uncaring destruction of the natural environment.</p>
                                 </div>
                             </div>
                         </div>
@@ -596,7 +596,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hPZpsS942DrqvBjPDwyi+CI7a9CkX/BBTVOZ+0H8bEnML/O1uUdNsfWtY6jOW21NWEQ1vqsuxWPYIoD7NNB2wQIA06i+/f17VaT0RGHj6OLlnATUogBAbrYDPGF1nmAf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YC/I7EYHu+bhbQcfdPTX3gyx01OhlcBz5giVZT7L05lwUNtnXHrIpI1tMG5jdOwpoV7SEkPkDLJRRekQ/yhfo6Xpap0MipdOimvx2eoJkWmB7ouu1TnlmPVWwHV0/Tad">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -696,7 +696,6 @@
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  <script src="//code.tidio.co/r3agggdeuai9cb3xbqbeaadhe0fcfkzn.js" async></script>
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgba(42, 212, 53, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='#2ad435' data-cookie-colorLink='#232323' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. ">
