--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.wmo.int/ " class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/240px-emblem-of-the-united-nations.svg-240x204.png" alt="Mobirise" title="">
+                        <img src="assets/images/240px-emblem-of-the-united-nations.svg-240x204.png" alt="WMO" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">WORLD METEOROLOGICAL ASSOCIATION (WMO)</h4>
@@ -119,7 +119,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.unenvironment.org" class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/untitled-1-272-676x451.jpeg" alt="Mobirise" title="">
+                        <img src="assets/images/untitled-1-272-676x451.jpeg" alt="UNEP" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">UNITED NATIONS ENVIRONEMENT PROGRAM (UNEP)</h4>
@@ -134,7 +134,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.iucn.org" class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/500px-iucn-logo.svg-565x477.png" alt="Mobirise" title="">
+                        <img src="assets/images/500px-iucn-logo.svg-565x477.png" alt="IUCN" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">INTERNATIONAL UNION FOR CONSERVATION OF NATURE<br>(IUCN)&nbsp;</h4>
@@ -161,7 +161,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.ipcc.ch" class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/ipcc-logo-676x451.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/ipcc-logo-676x451.jpg" alt="IPCC" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">INTERGOVERNMENTAL PANEL ON CLIMATE CHANGE (IPCC)</h4>
@@ -175,7 +175,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.worldwildlife.org/" class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/1200px-wwf-logo.svg-150x150.png" alt="Mobirise" title="">
+                        <img src="assets/images/1200px-wwf-logo.svg-150x150.png" alt="WFF" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -191,7 +191,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://www.greenpeace.org" class="btn btn-primary display-4" target="_blank">OFFICIAL WEBSITE</a></div>
-                        <img src="assets/images/images-1-470x313.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/images-1-470x313.jpg" alt="Greenpeace" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">GREENPEACE</h4>
@@ -228,7 +228,7 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/gettyimages-1144425714-cotton-farm-after-rain-700x467.jpg" alt="" title="">
+                        <img src="assets/images/gettyimages-1144425714-cotton-farm-after-rain-700x467.jpg" alt="CC" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>CLIMATE CHANGE</strong></h4>
@@ -240,7 +240,7 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/d5yb23g-d929fd34-7b19-4bc1-ba39-143b457a1498-700x467.jpg" alt="" title="">
+                        <img src="assets/images/d5yb23g-d929fd34-7b19-4bc1-ba39-143b457a1498-700x467.jpg" alt="Global warming" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>GLOBAL WARMING</strong></h4>
@@ -251,7 +251,7 @@
             </div><div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/editorial-700x467.jpg" alt="" title="" data-slide-to="2">
+                        <img src="assets/images/editorial-700x467.jpg" alt="" title="Deforestation" data-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>DEFORESTATION</strong></h4>
@@ -273,7 +273,7 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/ozone-hole-700x467.png" alt="" title="">
+                        <img src="assets/images/ozone-hole-700x467.png" alt=")Ozone layer depletion" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>OZONE LAYER DEPLETION</strong></h4>
@@ -285,7 +285,7 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/images-1-700x467.jpg" alt="" title="">
+                        <img src="assets/images/images-1-700x467.jpg" alt="Desertification" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>DESERTIFICATION</strong></h4>
@@ -299,7 +299,7 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/nature-pollution-700x467.jpg" alt="" title="">
+                        <img src="assets/images/nature-pollution-700x467.jpg" alt="Water pollution" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7"><strong>WATER POLLUTION</strong></h4>
@@ -338,7 +338,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/observer-online-april2019-educatingsustainability-big-1-492x328.png" alt="Mobirise" title="">
+                        <img src="assets/images/observer-online-april2019-educatingsustainability-big-1-492x328.png" alt="Sustainability" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -354,7 +354,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/t39057-492x328.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/t39057-492x328.jpg" alt="Reusable" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -370,7 +370,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/recyclinghero-492x328.png" alt="Mobirise" title="">
+                        <img src="assets/images/recyclinghero-492x328.png" alt="Recycling" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -386,7 +386,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/renewable-energy-2-492x328.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/renewable-energy-2-492x328.jpg" alt="Renewable energy" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -414,7 +414,7 @@
             
         <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/lil-dicky-510x765d-510x468.jpg" alt="" title="">
+                    <img src="assets/images/lil-dicky-510x765d-510x468.jpg" alt="Lil Dickey" title="">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -436,7 +436,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/sir-david-attenborough-510x468.jpg" alt="" title="">
+                    <img src="assets/images/sir-david-attenborough-510x468.jpg" alt="Lord Attenborough" title="">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -447,7 +447,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/ed-abbey-cactus-s-510x468.jpg" alt="" title="">
+                    <img src="assets/images/ed-abbey-cactus-s-510x468.jpg" alt="Edward Abey" title="">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -459,7 +459,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/xiye-510x468.jpg" alt="" title="">
+                    <img src="assets/images/xiye-510x468.jpg" alt="Xiye Bastida" title="">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
